# limitless

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
bench/: _debug_scores.py  _measure_only.py  infer_scale.py
bench/beam_subset/: dataset.json  run.py
bench/graphwalks/: _diagnose.py  _inspect.py  _smoke.py  baseline.py  loader.py  query_parser.py  run.py  storage.py
bench/mrcr/: _inspect.py  baseline.py  loader.py  query_parser.py  run.py  storage.py
bench/pilot_cortex/: PAPER.md  analyze.py  compare.py  make_chart.py  run.py
bench/pilot_opus/: make_chart.py  make_chart_ruler.py  make_chart_v2.py  make_chart_v3.py  run.py  run_graphwalks.py  run_ruler.py
bench/plugin_virtualization/: bench_server.py  run.py
bench/plugin_virtualization_full/: run.py
docs/: timegraph.md
infra/: README.md
phase0/: beam_spike.py  diag_response_format.py  eval_extraction.py  eval_judge.py  quick_check.py
results/opus_vs_cortex/: mrcr.json  mrcr_v2.json  mrcr_v3.json  mrcr_v4.json  ruler.json  ruler_all.json  ruler_k200.json  ruler_merged.json  ruler_v2.json  ruler_v2_10m_k2000.json
results/pilot_cortex/: pilot5.analysis.json  pilot5.json  pilot5_v2.analysis.json  pilot5_v2.json  pilot5_v3.analysis.json  pilot5_v3.json  scale30_v3.json  scale30_v3_broken.json
scripts/: hook_ingest.py  hook_recall.py  hook_session_start.py  hook_tool_use.py  make_beam_chart.py  make_chart.py  make_graphwalks_chart.py  make_mrcr_chart.py  smoke.py  smoke_cortex_passthrough.py  smoke_judge_haiku.py  smoke_mcp.py  smoke_wave1.py  smoke_wave2.py  smoke_wave3.py  verify_web_search_roundtrip.py
(+82 files in other folders)
