[project]
name = "timegraph-mcp"
version = "0.1.0-dev"
description = "Local prototype of MCP-mediated infinite LLM context — B.4-v2 TimeGraph-Fusion-Tight + B.2-v2 SignalChannel-Attest pairing. Tests on RTX 4090 + Qwopus3.6-27B."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jameson" }]

dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "neo4j>=5.20",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0",
    "setfit>=1.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "apscheduler>=3.10",
    "aiolimiter>=1.1",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "jinja2>=3.1",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[neo4j]>=4.8",
    "pytest-benchmark>=4.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "ipython>=8.28",
]
bench = [
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scipy>=1.14",
]

[project.scripts]
timegraph-mcp = "timegraph.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timegraph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring Docker (Neo4j + Qdrant)",
    "llm: tests requiring llama-server running",
    "slow: tests >5s",
]
